cleaned up / finished readme

--- a/src/components/styles/AnimalIndex.css
+++ b/src/components/styles/AnimalIndex.css
@@ -1,5 +1,1 @@
-/* .animal-photos {
-  display: flex;
-  height: 100vh;
-  width: 100%;
-} */
+/* KEEPING THIS HERE TO REMIND MYSELF STUDENTS SHOULD DELETE IT */
