--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: inherit;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
